fix/user & group activity handler
