# src/handlers/userActivityHandler.js
@@ -4,12 +4,18 @@ const {db} = require('../../firestore');
 
 const createUserActivityHandler = async (request, h) => {
   try {
-    const {activityName, description, startTime, endTime, finishTime} =
-      request.payload;
+    const {
+      activityName,
+      description,
+      startTime,
+      endTime,
+      finishTime,
+      location,
+    } = request.payload;
     const userId = request.authUser.email;
 
     // check request body payload
-    if (!activityName || !description || !startTime || !endTime) {
+    if (!activityName || !startTime || !endTime) {
       const response = h.response({
         message: 'bad request',
       });
@@ -21,13 +27,14 @@ const createUserActivityHandler = async (request, h) => {
     const activitiesRes = await db.collection('userActivities').add({
       userId: userId,
       activityName: activityName,
-      description: description,
+      description: description || '',
       startTime: Timestamp.fromDate(new Date(startTime)),
       endTime: Timestamp.fromDate(new Date(endTime)),
       finishTime:
         finishTime !== undefined
           ? Timestamp.fromDate(new Date(finishTime))
           : null,
+      location: location || '',
     });
     // update the activities id property
     db.collection('userActivities').doc(activitiesRes.id).update({
@@ -75,6 +82,7 @@ const getAllUserActivitiesHandler = async (request, h) => {
             doc.data().finishTime !== null
               ? new Date(doc.data().finishTime.seconds * 1000)
               : null,
+          location: doc.data().location,
         });
       });
 
@@ -100,6 +108,7 @@ const getAllUserActivitiesHandler = async (request, h) => {
           doc.data().finishTime !== null
             ? new Date(doc.data().finishTime.seconds * 1000)
             : null,
+        location: doc.data().location,
       });
     });
 
@@ -145,6 +154,7 @@ const getUserActivityHandler = async (request, h) => {
           userActivity.data().finishTime !== null
             ? new Date(userActivity.data().finishTime.seconds * 1000)
             : null,
+        location: userActivity.data().location,
       },
     });
     response.code(200);
@@ -161,8 +171,14 @@ const getUserActivityHandler = async (request, h) => {
 const updateUserActivityHandler = async (request, h) => {
   try {
     const {activityId} = request.params;
-    const {activityName, description, startTime, endTime, finishTime} =
-      request.payload;
+    const {
+      activityName,
+      description,
+      startTime,
+      endTime,
+      location,
+      finishTime,
+    } = request.payload;
 
     // check request body payload
     if (
@@ -170,6 +186,7 @@ const updateUserActivityHandler = async (request, h) => {
       !description &&
       !startTime &&
       !endTime &&
+      !location &&
       !finishTime
     ) {
       const response = h.response({
@@ -204,6 +221,9 @@ const updateUserActivityHandler = async (request, h) => {
     }
     if (endTime) {
       updatedActivity.endTime = Timestamp.fromDate(new Date(endTime));
+    }
+    if (location) {
+      updatedActivity.location = Timestamp.fromDate(new Date(location));
     }
     if (finishTime) {
       updatedActivity.finishTime = Timestamp.fromDate(new Date(finishTime));
